--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
-
-
 html, body {
 box-sizing: border-box;
     height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/*футер всё равно не прижат к низу экрана, все три свойства стало быть лишние*/
 .wrapper {
     min-height: 100%;
     display: flex;
@@ -15,67 +13,45 @@ box-sizing: border-box;
 /* ШАПКА */
 .header {
     height: 100px;
-    /*цвета указывают в hex формате за редким исключением, здесь #A8ECFA*/
-    background-color: rgb(168, 236, 250);
+    background-color: #A8ECFA;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #092c46;
     margin-bottom: 50px;
 }
 
 /* ОСНОВНОЙ КОНТЕНТ */
-/*вёрстка флексами не по назначению, здесь достаточно было*/
-/*указать max-width: Npx; margin: 0 auto, флексы лишние*/
 main {
-    display: flex;
-    justify-content: center;
-}
-.questions {
-
+    flex: 1 1 auto;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
-/*здесь и далее очень плохие селекторы,*/
-/*по хорошему добавляют классы к конкретным тегам в html,
-т.е. никакой проблемы указать этот блок как .question */
-.questions > div:nth-child(n+2) { /* '>' - обращение к дочерним тегам; n+2 начиная со второго элемента*/
+.question {
     display: flex;
+    min-height: 120px;
+    flex-wrap: wrap;
     border-bottom: 1px solid #CAD4DD;
-    padding: 30px 0;
     justify-content: space-between;
+    align-items: center;
 }
 
-.questions p:nth-child(odd) {
-    /*как и в случае с программированием*/
-    /*в css вообще не привествуется дублирование,*/
-    /*обычно заголовки имеют один шрифт, контент другой,*/
-    /*перечислять дополнительно заново css свойства - плохая практика,*/
-    /*по хорошему это .heading и .text ниже*/
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 300px;
+.heading {   
+    width: 250px;
     font-weight: 700;
     text-transform: uppercase;
     color: #437091;
-    justify-self: start;
     margin-right: 50px;
 }
-.questions p:nth-child(even) {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   width: 300px;
-}
-.questions a {
-    width: 300px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: auto 0;
-}
-.questions ul {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 285px;
+.text {
+    width: 250px;
 }
 
-.questions__im {
+.question__list {
+    width: 235px;
 }
+
 .im {
     display: flex;
 }
@@ -84,44 +60,19 @@ main {
     max-height: 250px;
     margin-right: 30px;
 }
-.im__photo img {
+.img {
     width: 100%;
     height: 100%;
 }
 .im__name {
     padding-left: 10px;
-}
-
-/*нет, гораздо лучше дать конкретному блоку необходимый класс*/
-.im__name p:nth-child(2) {
     width: auto;
     max-width: 420px;
     font-size: 23px;
     font-weight: 700;
     margin-top: 50px;
-    text-align: start;
 }
-/*все эти пустые селекторы ни к чему*/
-.questions__edu {
-}
-.questions__job {
-}
-.questions__programming-exp {
-}
-.questions__english {
-}
-.questions__goal-of-course {
-}
-.questions__where-found {
-}
-.questions__git {
-}
-.questions__about {
-}
-.questions__about ul {
-padding: 0;
-margin-left: 20px;
-}
+
 
 
 /* ПОДВАЛ*/
@@ -129,5 +80,19 @@ margin-left: 20px;
 .footer {
     margin-top: 100px;
     height: 150px;
-    background-color: rgb(168, 236, 250);
+    background-color: #A8ECFA;
+}
+
+
+@media (max-width: 650px) {
+html {
+    font-size: 14px;
+}
+ .question {
+    justify-content: center;
+ }
+ .heading, .text {
+    width: 200px;
+ }
+    
 }
