--- a/css/style.css
+++ b/css/style.css
@@ -94,5 +94,12 @@ html {
  .heading, .text {
     width: 200px;
  }
+ .question__list {
+    width: 160px;
+ }
+ .heading {
+    padding-left: 50px;
+ }
+
     
 }
